[tool.poetry]
name = "reusable-workflows"
version = "1.0"
description = ""
authors = ["Miku <26039249+xMikux@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
requests = "^2.32.3"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
