[project]
name = "modpack-parar2"
version = "1.0"
description = ""
authors = [
    {name = "Miku",email = "26039249+xMikux@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
loguru = "0.7.3"
pooch = "1.8.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
